# Delta

./: CMakeList.txt  CMakeLists.txt  Cmake.txt  Delta - YOLO  DeltaACT.py  DeltaAnalyze.py  DeltaBrain.py  DeltaSensors.py  DeltaTensors.py  Delta_Vision.py  Delta_train.py  README.md
.devcontainer/: PID.yaml  devcontainer.json
Bridge/: Delta - YOLO analyze.py  Delta - YOLO.py  Delta-YOLO.py  Delta-YOLO_analyze.py  Delta_Sensors.py  Delta_YOLO.py  Delta_YOLO_analyze.py  Delta_brain.py  Delta_decision.py  Delta_train.py
Core/: CMakeLists.txt  Cmake.txt  Delta_core.py  physics_bridge.py
Delta-YOLO/: Delta_bridge.py
DeltaLearn/: Delta_Gradients_analyze  Delta_Gradients_analyze.py
Physics/: CMakeList.txt  Cmake.txt  Distance.h  Dynamic.h  PID.h  Planner.h  State.h  main.cpp
config/: Bridge_config.yaml  CV_config.yaml  pid_config.yaml
src/Bridge/: Delta_YOLO.py  YOLO_analyze.py  decision.py
src/CV/: brain.py  sensors.py  train.py
src/Physics/: Distance.h  Dynamic.h  PID.h  Planner.h  State.h  main.cpp
